[gd_scene load_steps=9 format=3 uid="uid://cfihiikebo74m"]

[ext_resource type="Script" path="res://game/scripts/Portal.gd" id="1_e2g0q"]
[ext_resource type="Texture2D" uid="uid://ngnv668cs60v" path="res://assets/Portal.png" id="2_s513p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iedex"]
size = Vector2(3, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_olnhy"]
atlas = ExtResource("2_s513p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pubg"]
atlas = ExtResource("2_s513p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwu4g"]
atlas = ExtResource("2_s513p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rquvb"]
atlas = ExtResource("2_s513p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i1j23"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olnhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwu4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rquvb")
}],
"loop": true,
"name": &"warping",
"speed": 5.0
}]

[node name="Portal" type="Node2D"]
script = ExtResource("1_e2g0q")

[node name="entry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="entry"]
shape = SubResource("RectangleShape2D_iedex")

[node name="entrySprite" type="AnimatedSprite2D" parent="entry"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_i1j23")
animation = &"warping"
flip_v = true

[node name="exit" type="Area2D" parent="."]
position = Vector2(75, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
shape = SubResource("RectangleShape2D_iedex")

[node name="exitSprite" type="AnimatedSprite2D" parent="exit"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_i1j23")
animation = &"warping"

[connection signal="body_entered" from="entry" to="." method="_body_entered_portal"]
[connection signal="body_entered" from="exit" to="." method="_body_entered_portal"]
